--- a/src/components/ArrowButton/style.module.scss
+++ b/src/components/ArrowButton/style.module.scss
@@ -4,16 +4,29 @@
     overflow-x: hidden;
     background-color: white;
     max-width: 75px;
-    max-height: 60px;
+    max-height: 75px;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 
     img{
         width: 100%;
         height: 100%;
+        transition: ease-out .3s .3s;
+        z-index: 2;
     }
-    
-    &:hover  img{
-        opacity: 1;
-        transform:scaleX(1);
+
+    &:hover {
+        img{
+            filter: invert(100%);
+        }
+        .backgroundHover{
+            transform: scaleX(1);
+            opacity: 1;
+
+        }
     }
 
     @media(min-width: 1570px){
@@ -22,14 +35,57 @@
     }
 }
 
+.xl{
+    width: 75px;
+    height: 60px;
+    padding: 20px;
+    
+    @media(min-width: 768px ){
+        padding: 20px;
+    }
 
-.hoverEffect{
-    position: absolute;
+    @media(min-width: 1570px){
+        width: 145px;
+        height: 118px;
+        padding: 40px;
+    }
+}
+
+.md{
+    width: 60px;
+    height: 60px;
+    padding: 20px;
+
+    @media(min-width: 768px ){
+        width: 75px;
+        height: 75px;
+        padding: 20px;
+    }
+
+    @media(min-width:  1570px){
+        width: 130px;
+        height: 130px;
+        padding: 51px;
+    }
+}
+
+.sm{
+    width: 145px;
+    height: 118px;
+}
+
+.backgroundHover{
+    position:absolute;
     top: 0;
-    left: 0;
-    opacity: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bs-secondary);
+    transition: ease-out .3s .3s;
     transform:scaleX(0);
-    transition: ease-out .3s;
+    opacity: 0;
+    z-index: -1;
+    
 }
 
 .prev{
@@ -40,3 +96,13 @@
     transform-origin: left;
 }
 
+.hover{
+    img{
+        filter: invert(100%);
+    }
+    .backgroundHover{
+        transform: scaleX(1);
+        opacity: 1;
+
+    }
+}
