--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,6 +70,26 @@
         }
     }
 
+}
+
+.photoCards{
+    margin: 40px 0;
+    .col{
+        margin-bottom: 15px;
+    }
+
+    @media (min-width: 768px){
+        margin: 141px 0;
+
+        .col:nth-child(even){
+            margin-bottom: 0px;
+            padding: 0 0px 29px 16px;
+        }
+        .col:nth-child(odd){
+            margin-bottom: 0px;
+            padding: 0px 13px 15px 0px
+        }
+    }
     
 }
 
