--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,7 +11,7 @@ body {
   overflow-x: hidden;
   font-size: 16px;
   font-family: Poppins, sans-serif;
-  color: var(--bs-primary);
+  color: var(--bs-secondary);
 }
 button{
   border: none;
