--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -79,7 +79,7 @@
     }
 
     @media (min-width: 768px){
-        margin: 141px 0;
+        margin: 141px 0 120px;
 
         .col:nth-child(even){
             margin-bottom: 0px;
@@ -91,6 +91,71 @@
         }
     }
     
+}
+
+.pictureCards {
+
+    p{
+        font-weight: 400;
+        font-size: 28px;
+    }
+    
+    h2{
+        position: relative;
+        font-weight: 700;
+
+    
+        &::after{
+            content: '';
+            height: 5px;
+            width: 130px;
+            background: var(--bs-secondary);
+            position: absolute;
+            bottom: -25px;
+            left: 0;
+        }
+        
+    }
+
+    @media (min-width: 768px){
+        h2{
+            font-size: 36px;
+
+            &::after{
+                bottom: -113px;
+                height: 10px;
+            }
+        }
+    }
+
+    @media (min-width: 992px){
+
+        .col:nth-child(2){
+            padding-left: 30px;
+        }
+        .col:nth-child(3){
+            padding-left: 65px;
+        }
+        .col:nth-child(4){
+            padding-left: 100px;
+        }
+        .col:nth-child(6){
+            padding-left: 30px;
+        }
+        .col:nth-child(7){
+            padding-left: 65px;
+        }
+        .col:nth-child(8){
+            padding-left: 100px;
+        }
+    }
+
+    @media (min-width: 1140px){
+        h2{
+            font-size: 48px;
+            padding-right: 100px;
+        }
+    }
 }
 
 footer{
