--- a/src/components/PictureCard/style.module.scss
+++ b/src/components/PictureCard/style.module.scss
@@ -14,6 +14,7 @@
         
         @media (min-width: 1400px){
             font-size: 28px;
+            padding-right: 30px;
         }
     }
 }
