--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -123,6 +123,10 @@
         margin-top: 36px;
     }
 
+    .col:last-child{
+        transform: translateX(-33px);
+    }
+
     @media (min-width: 768px){
         h2{
             font-size: 36px;
@@ -131,7 +135,9 @@
                 bottom: -113px;
                 height: 10px;
             }
+        
         }
+
     }
 
     @media (min-width: 992px){
@@ -158,6 +164,7 @@
             margin-top: 36px;
             padding-right: 80px;
             justify-content: flex-start;
+            transform: translateX(0px);
         }
     }
 
@@ -165,6 +172,87 @@
         h2{
             font-size: 48px;
             padding-right: 100px;
+        }
+    }
+}
+
+.banner{
+    max-width: 1585px;
+    width: 100%;
+    float: right;
+    margin: 75px 0;
+    position: relative;
+    white-space: pre-line;
+
+    .ornament{
+        position: absolute;
+        z-index: 2;
+        right: 11%;
+        top: -11%;
+        width: 75px;
+    }
+
+    h2{
+
+        font-size: 24px;
+        font-weight: 700;
+        position: absolute;
+        top: 6%;
+        left: 20px;
+
+        &::after{
+            content: "";
+            display: block;
+            width: 100%;
+            height: 20px;
+            background-color: var(--bs-secondary);
+            margin-top: 7%;
+
+        }
+    }
+
+
+    @media (min-width: 728px){
+        margin: 191px 0;
+        h2{
+            font-size: 48px;
+            font-weight: 700;
+            position: absolute;
+            top: 25%;
+            left: 20px;
+
+            &::after{
+                margin-top: 169px;
+            }
+        }
+        
+        .ornament{
+            position: absolute;
+            z-index: 2;
+            right: 11%;
+            top: -11%;
+            width: 120px;
+        }
+    }
+
+    @media (min-width: 1140px){
+        .ornament{
+            width:auto;
+        }
+    }
+
+    @media(min-width: 1570px){
+        h2{
+            font-size: 65px;
+            top: 215px;
+            left: -157px;
+            width: 610px;
+    
+            &::after{
+                content: '';
+                height: 20px;
+                margin-top: 169px;
+            }
         }
     }
 }
