--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -213,7 +213,7 @@
 
 
     @media (min-width: 728px){
-        margin: 191px 0;
+        margin: 191px 0 147px;
         h2{
             font-size: 48px;
             font-weight: 700;
@@ -254,6 +254,40 @@
                 margin-top: 169px;
             }
         }
+    }
+}
+
+.news{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 90px;
+
+    h2{
+        text-align: center;
+        margin-bottom: 50px;
+
+    }
+    .col{
+        border: solid 1px black;
+        height: 300px;
+    }
+
+    .newsRow{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    @media (min-width: 992px){
+
+        h2{
+            margin-bottom: 111px;
+        }
+
+        .newsRow{
+            justify-content: space-between;
+        }
+
     }
 }
 
