--- a/src/components/BusinessCard/style.module.scss
+++ b/src/components/BusinessCard/style.module.scss
@@ -1,13 +1,33 @@
 .wrapper{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
         
     h2{
-        color: var(--bs-secondary);
+        font-size: 65px;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-bottom: 45px;
     }
-    
+
+    @media (min-width: 1140px){
+        text-align: left;
+    }
+}
+
+.address{
+    margin-bottom: 27px;
+
+    p{
+        margin-bottom: 3px;
+    }
+}
+
+.contact{
     a{
         font-weight: 700;
+        font-size: 16px;
+        width: 100%;
+        display: block;
     }
 }
