--- a/src/components/MobileMenu/style.module.scss
+++ b/src/components/MobileMenu/style.module.scss
@@ -15,6 +15,19 @@
 
     p, a{
         color: var(--bs-secondary);
+        text-align: left;
+        align-self: center;
+    }
+
+    h2{
+        color: var(--bs-secondary);
+        margin-bottom: 20px;
+        align-self: center;
+
+    }
+
+    li{
+        margin-bottom: 0;
     }
 }
 
