--- a/src/layout/style.module.scss
+++ b/src/layout/style.module.scss
@@ -29,12 +29,62 @@
 .socials{
     align-items: center;
     @media (min-width:1570px){
-        margin-top: 8px;
+        margin-top: 5px;
         margin-right: 1px;
     }
 
 }
 
+.footer{
+    .container{
+        flex-wrap: wrap;
+        border: solid green 3px;
+
+        div {
+            width: 100%;
+        }
+    }
+}
+
+.footer__top{
+    width: 100%;
+    display: flex;
+    margin-bottom: 145px;
+}
+
+.footer__bottom{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+
+    p{
+        margin: 0;
+        padding-right: 10px;
+    }
+}
+
+.footer__ornament{
+    position: absolute;
+    top: -120px;
+    right: 0;
+}
+
+.navigationFooter{
+    margin-left: 400px;
+    width: 700px;
+    ul{
+        margin: 123px 0 0 57px;
+        list-style-type: none;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    li{
+        width: 50%;
+        margin-bottom: 17px;
+    }
+}
 
 
 
