--- a/src/components/Burger/style.module.scss
+++ b/src/components/Burger/style.module.scss
@@ -22,7 +22,7 @@
     left:0;
     width: 100%;
     height: 4px;
-    background-color: var(--bs-primary);
+    background-color: var(--bs-secondary);
     transition: .3s;
 
 
@@ -31,7 +31,7 @@
         position: absolute;
         left: 0;
         height: 4px;
-        background-color: var(--bs-primary);
+        background-color: var(--bs-secondary);
         width: 100%;
         transition: .3s;
     }
