--- a/src/components/GallerySlider/style.module.scss
+++ b/src/components/GallerySlider/style.module.scss
@@ -2,6 +2,7 @@
     position: relative;
     margin-bottom: 170px;
     overflow: hidden;
+
     h2{
         position: absolute;
         z-index: 3;
@@ -18,6 +19,19 @@
             background-color: var(--bs-secondary);
         }
     }
+
+        a {
+            img{
+                animation: ease-out zoomOut .3s;
+            }
+        }
+
+        a:hover {
+            img{
+                animation: forwards ease-out zoom .3s;
+            }
+        }
+    
 
     @media(min-width: 728px){
         h2{
@@ -146,4 +160,27 @@
         grid-gap: 35px;
     }
     
+}
+
+
+@keyframes zoom {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1.2);
+
+    }
+}
+
+@keyframes zoomOut {
+    0% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+
+    }
 }
